# LLVMRuntimeExample

./: README.md
llvmpass/: CMakeLists.txt  LoopIdAssigner.cpp  findPrefetch.cpp
llvmpass/dynamic_rt/: CMakeLists.txt  runtime.cpp
llvmpass/testset/: Makefile  demo  demo.bc  demo.c  demo.ll  demo.tr  demo2  loop6  loop6.c
